sort spacing issues on case study template

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -31,16 +31,13 @@
 		li {
 			list-style: none;
 			list-style-position: outside;
-			font-family: Roboto Slab, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-				Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-				'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-			line-height: 26px;
-			margin-bottom: 1rem;
+			line-height: 32px;
+			margin-left: 1rem;
 		}
 
 		li::before {
 			content: url('/images/Chevron-Left-list.svg');
-			margin-right: 1rem;
+			margin-right: 0.3rem;
 			display: inline-block;
 		}
 	}
@@ -261,4 +258,8 @@ fieldset a {
 		currentColor 52.5%,
 		transparent 52.25%
 	);
+}
+
+.case-study-sanity-content p {
+	margin-bottom: 1rem;
 }
